# SocietySim

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  compute_personal_event.msl  generate_people.msl
game/buildings/: main.ron
game/goods/: main.ron
game/institutions/: main.ron
game/jobs/: main.ron
game/personal_events/: main.json
game/policies/: main.ron
game/skills/: main.ron
game/traits/: main.json  main.ron
gpu/: Cargo.toml
gpu/src/: lib.rs  math.rs  rand.rs  rng.c
shared/: Cargo.toml  rust-toolchain
shared/shared_proc/: Cargo.toml
shared/shared_proc/src/: lib.rs
shared/src/: chance.rs  consts.rs  lib.rs  person.rs  person_event.rs  simd.rs  sync.rs  time.rs
shared/src/game_data/: building.rs  good.rs  job.rs  mod.rs  skill.rs
shared/src/person/: stats.rs
shared/src/population/: generation.rs  mod.rs  stats.rs
src/: context.rs  main.comp  main.rs  menu.rs  population.rs  state.rs
src/api/: generate_people.rs  mod.rs
src/data/: mod.rs
src/game/: generate_people.rs  mod.rs  personal_events.rs  population_stats.rs
src/vulkan/: alloc.rs  error.rs  mod.rs
src/vulkan/device/: mod.rs  physical.rs
vulkan/: Cargo.toml  rust-toolchain
vulkan/proc/: Cargo.toml
vulkan/proc/src/: lib.rs
vulkan/src/: alloc.rs  async.rs  buffer.rs  descriptor.rs  device.rs  error.rs  lib.rs  physical_dev.rs  pipeline.rs  pool.rs  queue.rs  shader.rs  shared.rs  sync.rs  utils.rs
vulkan/src/context/: event.rs  mod.rs
vulkan/src/context/command/: compute.rs  mod.rs  transfer.rs
vulkan/src/context/event/: async.rs  mod.rs
vulkan/src/context/event/consumer/: map.rs  mod.rs
vulkan/src/device/: logical.rs  mod.rs  physical.rs
