[package]
name = "society-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkan = { path = "vulkan", features = ["tokio"] }
anyhow = "1.0.68"
cfg-if = "1.0.0"
docfg = "0.1.0"
async-lock = "2.6.0"
tokio = { version = "1.23.0", features = ["full"] }

[workspace]
members = ["vulkan", "vulkan/proc"]
