[package]
name = "society-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkan = { path = "vulkan", features = ["tokio"] }
tokio = { version = "1.23.0", features = ["full"] }
anyhow = "1.0.68"
cfg-if = "1.0.0"
docfg = "0.1.0"
async-lock = "2.6.0"
shared = { path = "shared" }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
ron = "0.8.0"
futures = "0.3.25"
humansize = { version = "2.1.3", features = ["impl_style"] }
elor = "1.1.4"
vector_mapp = { version = "0.2.1", features = ["serde"] }

[workspace]
members = ["shared", "shared/shared_proc", "gpu", "vulkan", "vulkan/proc"]

[build-dependencies]
spirv-builder = "0.4.0"
