[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
glam = { version = "0.22.0", default-features = false, features = ["libm"] }
shared_proc = { path = "shared_proc" }

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = { version = "0.4.0", features = ["glam"] }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
serde = { version = "1.0.152", features = ["derive"], default-features = false }
vector_mapp = { version = "0.2.2", features = ["serde"] }
elor = "1.1.4"
anyhow = "1.0.68"
itertools = "0.10.5"