[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
alloc = []

[dependencies]
proc = { path = "proc" }
anyhow = "1.0.68"
bitflags = "1.3.2"
cfg-if = "1.0.0"
docfg = "0.1.0"
futures = "0.3.25"
into_string = "2.0.0"
libloading = "0.7.4"
packed_simd_2 = "0.3.8"
rand = { version = "0.8.5", features = ["packed_simd", "simd_support"] }
rand_derive2 = "0.1.18"
thiserror = "1.0.38"
vulkan-bindings = "1.3.231"
async-lock = "2.6.0"
elor = "1.1.3"
pin-project-lite = "0.2.9"
tokio = { version = "1.23.0", optional = true }
serde = "1.0.152"
ahash = "0.8.2"
once_cell = "1.17.0"
